assets/css/styles.css
@import url("https://fonts.googleapis.com/css?family=Ubuntu");
body{
    margin:0;
    overflow: hidden;
    position: relative;
}
#outerCraneContainer {
  position: absolute;
  width: 100%;
  height: 100%;
  bottom: 0;
  overflow: hidden;
  display: flex;
  justify-content: center;
  left: 50%;
  min-width:1000px;
  transform: translateX(-50%);
  box-shadow: inset 0 -60px 0 -30px #5918DF;
}
.buildings {
  height: 84.9673202614379px;
  width: 100%;
  left: 0;
}
.buildings div {
  height: inherit;
  width: 42.48366013071895px;
  background: #5918DF;
  position: absolute;
  bottom: 10%;
}
.buildings div:after {
  content: '';
  width: 80%;
  height: 60%;
  left: 10%;
  bottom: 30%;
  background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAAGCAYAAAAG5SQMAAAAFElEQVQImWP4////fwYYIJKDEwAAfPsP8eFXG40AAAAASUVORK5CYII=") repeat;
  position: absolute;
}
.buildings div:nth-of-type(1) {
  width: 42.48366013071895px;
  height: 21.241830065359476px;
  right: 37%;
  bottom: 18%;
}
.buildings div:nth-of-type(1):after {
  bottom: 11%;
}
.buildings div:nth-of-type(2) {
  width: 48.552754435107374px;
  height: 28.322440087145967px;
  right: 30%;
  bottom: 35%;
  transform: rotate(180deg);
}
.buildings div:nth-of-type(2):after {
  width: 60%;
  left: 11%;
}
.buildings div:nth-of-type(3) {
  width: 24.276377217553687px;
  height: 37.76325344952796px;
  left: 40%;
  bottom: 35%;
}
.buildings div:nth-of-type(3):after {
  bottom: 0;
  width: 20%;
  height: 85%;
  left: 70%;
}
.buildings div:nth-of-type(4) {
  width: 84.9673202614379px;
  height: 21.241830065359476px;
  left: 24%;
  bottom: 20%;
}
.buildings div:nth-of-type(4):after {
  background: none;
}
.buildings div:nth-of-type(5) {
  width: 61.794414735591204px;
  height: 67.97385620915033px;
  left: 47%;
  bottom: 10%;
}
.buildings div:nth-of-type(5):after {
  bottom: 0;
  width: 40%;
  height: 85%;
  left: 20%;
}
.crane,
.buildings {
  position: absolute;
  bottom: 0;
}
.crane div {
  border-radius: 2px;
  position: absolute;
}
.crane .line {
  border: none;
  background: #5918DF;
  outline: 1px solid transparent;
  z-index: 0;
}
.crane .lineOne {
  width: 60%;
  left: 11%;
  top: 0;
}
.crane .lineTwo {
  width: 19%;
  right: 8%;
  top: 0;
}
.crane .line.lineThree {
  height: 30%;
  top: 22%;
  left: 9%;
}
.crane .line.lineThree:after {
  content: '';
  position: absolute;
  height: 0.2em;
  width: 9000%;
  background: #7B44ED;
  display: block;
  bottom: 0;
  left: -4500%;
  border: solid 1px #5918DF;
}
.craneTwo .line.lineThree:after {
  height: 0.1em;
}
.craneThree .line.lineThree:after {
  height: 0.05em;
}
.stand {
  height: 100%;
  width: 5%;
  right: 25%;
  z-index: 1;
  background: linear-gradient(to top, #5918DF, #8C79FF);
}
.craneTwo .stand {
  background: linear-gradient(to top, #5918DF, #8C79FF);
}
.craneThree .stand {
  background: linear-gradient(to top, #5918DF, #7B44ED);
}
.weight {
  height: 20%;
  width: 8%;
  right: 4%;
  top: 12%;
  z-index: 2;
  background: #8C79FF;
}
.craneTwo .weight {
  background: #8C79FF;
}
.craneThree .weight {
  background: #7B44ED;
}
.cabin {
  height: 9%;
  width: 12%;
  right: 24%;
  top: 20%;
  z-index: 2;
  background: #8C79FF;
}
.cabin:after {
  content: '';
  position: absolute;
  height: 10%;
  width: 100%;
  background: #fff;
  display: block;
  top: 60%;
  left: 0;
}
.craneTwo .cabin {
  background: #8C79FF;
}
.craneThree .cabin {
  background: #7B44ED;
}
.arm {
  height: 7%;
  width: 100%;
  top: 15%;
  z-index: 3;
  background: #8C79FF;
}
.craneTwo .arm {
  background: #8C79FF;
}
.craneThree .arm {
  background: #7B44ED;
}
.crane div.arm {
  border-top-left-radius: 10px;
}
.brick {
  height: 6%;
  width: 9%;
  bottom: 0;
  left: 40%;
  background: #7B44ED;
}
.brickTwo {
  left: 48%;
}
.brickThree {
  bottom: 5.5%;
  left: 44%;
}
.craneOne {
  width: 260px;
  height: 169.9346405228758px;
  left: 20%;
}
.craneOne div {
  border: solid 1px #5918DF;
}
.craneOne .line {
  height: 1px;
}
.craneOne .lineThree {
  width: 1px;
}
.craneTwo {
  width: 200px;
  height: 130.718954248366px;
  transform: scaleX(-1);
  left: 40%;
  z-index: -1;
}
.craneTwo div {
  border: solid 1px #5918DF;
}
.craneTwo .line {
  height: 0.769230769230769px;
}
.craneTwo .lineThree {
  width: 0.714285714285714px;
  -webkit-animation-delay: 3s;
          animation-delay: 3s;
}
.craneTwo .cabin,
.craneTwo .arm,
.craneTwo .picker,
.craneTwo .weight {
  -webkit-animation-delay: 3s;
          animation-delay: 3s;
}
.craneThree {
  width: 130px;
  height: 84.9673202614379px;
  left: 60%;
  z-index: -1;
}
.craneThree div {
  border: solid 1px #5918DF;
}
.craneThree .line {
  height: 0.5px;
}
.craneThree .lineThree {
  width: 0.5px;
  -webkit-animation-delay: 1.5s;
          animation-delay: 1.5s;
}
.craneThree .brickThree {
  bottom: 5%;
}
.craneThree .brickOne,
.craneThree .brickTwo {
  bottom: 0;
}
.craneThree .cabin,
.craneThree .arm,
.craneThree .picker,
.craneThree .weight {
  -webkit-animation-delay: 1.5s;
          animation-delay: 1.5s;
}
.crane {
  perspective: 600px;
}
.lineOne {
  transform-origin: right 0;
  -webkit-animation: moveLineOne 12s infinite alternate;
          animation: moveLineOne 12s infinite alternate;
}
.lineTwo {
  transform-origin: top left;
  -webkit-animation: moveLineTwo 12s infinite alternate;
          animation: moveLineTwo 12s infinite alternate;
}
.lineThree {
  transform-origin: right center;
  -webkit-animation: moveLineThree 12s ease-in-out infinite alternate;
          animation: moveLineThree 12s ease-in-out infinite alternate;
}
.cabin,
.arm,
.picker {
  transform-origin: 80% center;
  -webkit-animation: moveCrane 12s infinite alternate;
          animation: moveCrane 12s infinite alternate;
}
.weight {
  transform-origin: 0 center;
  -webkit-animation: moveWeight 12s infinite alternate;
          animation: moveWeight 12s infinite alternate;
}
html {
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  -webkit-tap-highlight-color: transparent;
}
html,
body {
  height: 100%;
}
* {
  box-sizing: border-box;
}
body {
  background: linear-gradient(to top, #100E17, #15111F);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
}
#content {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-family: Ubuntu;
  color: #fff;
}
#content h1,
#content p {
  margin: -8rem 0 0 1rem;
}
#content p {
  margin-top: 0.5rem;
}
#license {
  position: absolute;
  bottom: 0;
  right: 5px;
}
@-webkit-keyframes moveCrane {
  0%, 20% {
    transform: rotateY(0);
  }
  70%, 100% {
    transform: rotateY(45deg);
  }
}
@keyframes moveCrane {
  0%, 20% {
    transform: rotateY(0);
  }
  70%, 100% {
    transform: rotateY(45deg);
  }
}
@-webkit-keyframes moveWeight {
  0%, 20% {
    transform: rotateY(0) translateX(0);
  }
  70%, 100% {
    transform: rotateY(45deg) translateX(-50%);
  }
}
@keyframes moveWeight {
  0%, 20% {
    transform: rotateY(0) translateX(0);
  }
  70%, 100% {
    transform: rotateY(45deg) translateX(-50%);
  }
}
@-webkit-keyframes moveLineOne {
  0%, 20% {
    transform: rotateY(0) rotateZ(-10deg);
  }
  70%, 100% {
    transform: rotateY(45deg) rotateZ(-10deg);
  }
}
@keyframes moveLineOne {
  0%, 20% {
    transform: rotateY(0) rotateZ(-10deg);
  }
  70%, 100% {
    transform: rotateY(45deg) rotateZ(-10deg);
  }
}
@-webkit-keyframes moveLineTwo {
  0%, 20% {
    transform: rotateY(0) rotateZ(29deg);
  }
  70%, 100% {
    transform: rotateY(15deg) rotateZ(29deg);
  }
}
@keyframes moveLineTwo {
  0%, 20% {
    transform: rotateY(0) rotateZ(29deg);
  }
  70%, 100% {
    transform: rotateY(15deg) rotateZ(29deg);
  }
}
@-webkit-keyframes moveLineThree {
  0% {
    transform: translate(0, 0);
  }
  20% {
    transform: translate(2500%, -18%);
  }
  60% {
    transform: translate(11000%, -25%);
  }
  70% {
    transform: translate(9100%, -25%);
    height: 30%;
  }
  90%, 100% {
    transform: translate(9100%, -15%);
    height: 80%;
  }
}
@keyframes moveLineThree {
  0% {
    transform: translate(0, 0);
  }
  20% {
    transform: translate(2500%, -18%);
  }
  60% {
    transform: translate(11000%, -25%);
  }
  70% {
    transform: translate(9100%, -25%);
    height: 30%;
  }
  90%, 100% {
    transform: translate(9100%, -15%);
    height: 80%;
  }
}

@import url(https://fonts.googleapis.com/css?family=Montserrat);
@font-face {
  font-family: "bebas_neueregular";
  src: url(https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap);
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: "bebas_neuebold";
  src: url(https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap);
  font-weight: normal;
  font-style: normal;
}
body,
html {
  display: block;
  padding: 0;
  margin: 0;
  width: 100%;
  position: relative;
  height: 100%;
}

body {
  font-family: "bebas_neuebold", "Arial", sans-serif;
}

section {
  position: relative;
  width: 100%;
  height: 100%;
}

#beerCanvas {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 100;
}

.coming_content {
  position: absolute;
  top: calc( 50% - 50px);
  left: 50%;
  transform: translate(-50%, -50%);
  width: 70%;
  margin: 0 auto;
  color: white;
  text-align: center;
  z-index: 101;
}
.coming_content h1 {
  font-size: 5.625em;
  margin: 0;
  letter-spacing: 2px;
  text-align: center;
  color: white;
}
.coming_content .separator_container {
  width: 100%;
  display: block;
  text-align: center;
  position: relative;
  margin: 12px 0;
}
.coming_content .separator_container:before, .coming_content .separator_container:after {
  display: table;
  content: "";
}
.coming_content .separator_container:after {
  clear: both;
}
.coming_content .separator {
  color: white;
  margin: 0 auto 1em;
  width: 11em;
}
.coming_content .line_separator img {
    color:white;
  width: 30px;
  height: 20px;
}
.coming_content .line_separator:before, .coming_content .line_separator:after {
  display: block;
  width: 40%;
  content: " ";
  margin-top: 14px;
  border: 1px solid white;
}
.coming_content .line_separator:before {
  float: left;
}
.coming_content .line_separator:after {
  float: right;
}
.coming_content h3 {
  font-family: "Montserrat", sans-serif;
  letter-spacing: 2px;
  line-height: 2;
  font-size: 1em;
  font-weight: 400;
  text-align: center;
  margin: 0;
}
.coming_content h3 a {
  text-decoration: underline;
}
@media screen and (max-width:720px){
    body {
        font-size: 12px;
       }
       .coming_content h3 {
        font-size: 1.5em;
      }
      .coming_content .line_separator:before, .coming_content .line_separator:after {
        width: 36%;
      }
}

